[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latencymesh"
version = "0.1.0"
description = "Tools for mapping Internet topology via asynchronous traceroutes"
readme = "README.md"
authors = [
  { name = "LatencyMesh Contributors" }
]
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]
dev = [
  "black>=24.0",
  "build>=1.0",
  "pytest>=7.0",
  "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["latencymesh", "latencymesh.*"]
