[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latencymesh"
version = "0.1.0"
description = "Tools for mapping Internet topology via asynchronous traceroutes"
readme = "README.md"
authors = [
  { name = "LatencyMesh Contributors" }
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.21",
  "httpx>=0.27",
]
dev = [
  "black>=24.0",
  "build>=1.0",
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.21",
  "httpx>=0.27",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["latencymesh", "latencymesh.*"]

[tool.setuptools.package-data]
latencymesh = [
  "webapp/static/*",
  "webapp/static/**/*",
]
